--- a/templates/bootstrap_5/form.html.twig
+++ b/templates/bootstrap_5/form.html.twig
@@ -5,7 +5,7 @@
             <caption class="text-center">
                 {% if attributes.title is not empty %}
                     {{ attributes.title|trans }}
-                    <span class="badge rounded-pill text-bg-warning"><span
+                    <span class="badge rounded-pill text-bg-secondary"><span
                             class="fw-normal">{{ ('f0ska.autogrid.action.' ~ action)|trans }}</span>
                 {% if action is not same as 'create' %}
                     <i class="bi bi-hash"></i> {{ entity.id }}
@@ -38,12 +38,12 @@
                             {% endif %}
                         </div>
                         <div class="col col-6 text-end">
-                            <button class="btn btn-sm btn-success" type="submit" form="{{ form.vars.attr.id }}">
+                            <button class="btn btn-sm btn-outline-secondary" type="submit" form="{{ form.vars.attr.id }}">
                                 <i class="bi bi-save"></i>
                                 {{ 'f0ska.autogrid.button.submit'|trans }}
                             </button>
-                            {% if agRun(agIsAllowed, 'delete') and attributes.delete_button_in.edit %}
-                                <a class="btn btn-sm btn-danger"
+                            {% if action is not same as 'create' and agRun(agIsAllowed, 'delete') and attributes.delete_button_in.edit %}
+                                <a class="btn btn-sm btn-outline-danger"
                                    href="{{ agRun(agActionUrl, 'delete', {'id': entity.id}) }}"
                                    onclick="return confirm('{{ 'f0ska.autogrid.dialog.delete_confirm'|trans }}');"
                                 >
