--- a/templates/bootstrap_5/fieldset/view.html.twig
+++ b/templates/bootstrap_5/fieldset/view.html.twig
@@ -1,4 +1,4 @@
-<div class="content-fluid">
+<div class="container-fluid">
     <div class="row">
         {% for fieldset in view.fieldset.defined %}
             <div class="col {{ fieldset.class }}">
