--- a/templates/bootstrap_5/base.html.twig
+++ b/templates/bootstrap_5/base.html.twig
@@ -1,3 +1,3 @@
-<div id="{{ attributes.container_id }}" class="{{ attributes.container_class }} instance-{{ agId }}">
+<div id="{{ attributes.container_id }}" class="{{ attributes.container_class }} instance-{{ agId }} table-responsive">
     {% block autogrid %}{% endblock %}
 </div>
