--- a/templates/bootstrap_5/grid/advanced_filter.html.twig
+++ b/templates/bootstrap_5/grid/advanced_filter.html.twig
@@ -4,7 +4,7 @@
             <i class="bi bi-funnel"></i>
         </a>
     {% endif %}
-    {% if view.advanced_filter_form is defined %}
+    {% if view.advancedFilterForm %}
         <button class="btn btn-sm {{ request.filter is defined ? btnClassActive : btnClass }}"
                 data-bs-toggle="modal"
                 data-bs-target="#exampleModal"
@@ -13,7 +13,7 @@
     {% endif %}
 </span>
 
-{% if view.advanced_filter_form is defined and agRun(agIsAllowed, 'advanced-filter') %}
+{% if view.advancedFilterForm and agRun(agIsAllowed, 'advanced-filter') %}
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true"
          data-bs-backdrop="false">
         <div class="modal-dialog modal-xl modal-fullscreen-sm-down">
@@ -29,14 +29,14 @@
                 </div>
                 <div class="modal-body">
                     <div class="container-fluid">
-                        {% if view.form_themes %}
-                            {% form_theme view.advanced_filter_form with view.form_themes %}
+                        {% if view.formThemes is not empty %}
+                            {% form_theme view.advancedFilterForm with view.formThemes %}
                         {% endif %}
-                        {{ form_start(view.advanced_filter_form) }}
+                        {{ form_start(view.advancedFilterForm) }}
                         <div class="row">
                             {% for field in fields %}
                                 {% if field.canFilter %}
-                                    {% set formField = attribute(view.advanced_filter_form, field.name) %}
+                                    {% set formField = attribute(view.advancedFilterForm, field.name) %}
                                     {% if formField.children|length %}
                                         {% for child in formField.children %}
                                             <div class="col col-12 col-xl-4 col-lg-6 mb-3">
@@ -54,8 +54,8 @@
                                 {% endif %}
                             {% endfor %}
                         </div>
-                        {{ form_rest(view.advanced_filter_form) }}
-                        {{ form_end(view.advanced_filter_form) }}
+                        {{ form_rest(view.advancedFilterForm) }}
+                        {{ form_end(view.advancedFilterForm) }}
                     </div>
                 </div>
 
@@ -64,7 +64,7 @@
                         <div class="row">
                             <div class="col col-6">
                                 <button type="submit"
-                                        form="{{ view.advanced_filter_form.vars.attr.id }}"
+                                        form="{{ view.advancedFilterForm.vars.attr.id }}"
                                         class="btn btn-outline-primary w-100 m-0"
                                 >
                                     {{- 'f0ska.autogrid.button.submit'|trans -}}
