--- a/templates/bootstrap_5/grid/column_value_massaction.html.twig
+++ b/templates/bootstrap_5/grid/column_value_massaction.html.twig
@@ -1,5 +1,8 @@
 {% if view.massActionForm %}
     <td class="{{ field.attributes.column_value_class|default('align-middle text-center') }}">
-        <input type="checkbox" name="{{ field_name(view.massActionForm.ids) }}[]" class="mass-ids-{{ agId }}" form="{{ view.massActionForm.vars.attr.id }}" value="{{ entity.id }}">
+        <label class="w-100">
+            <input type="checkbox" name="{{ field_name(view.massActionForm.ids) }}[]" class="mass-ids-{{ agId }}"
+                   form="{{ view.massActionForm.vars.attr.id }}" value="{{ entity.id }}">
+        </label>
     </td>
 {% endif %}
