--- a/templates/bootstrap_5/grid/column_header_massaction.html.twig
+++ b/templates/bootstrap_5/grid/column_header_massaction.html.twig
@@ -1,27 +1,41 @@
-{% if view.massActionForm %}
+{% if view.massActionFormView %}
+    {% set btnClass = attributes.html_classes.theadBtn|default('btn-outline-secondary') %}
     <th class="{{ field.attributes.column_header_class|default('align-middle') }}">
-        {{ form_start(view.massActionForm) }}
-        <div class="input-group flex-nowrap">
-            <div class="input-group-text">
-                <input class="form-check-input mt-0" type="checkbox" onchange="document.querySelectorAll('[name={{ ('"' ~ field_name(view.massActionForm.ids) ~ '[]"')|escape('html_attr') }}]').forEach(checkbox => { checkbox.checked = this.checked; })">
-            </div>
-            <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-                <span class="visually-hidden">Toggle Dropdown</span>
-            </button>
+        {{ form_start(view.massActionFormView) }}
+        <div class="input-group">
+            <button type="button"
+                    class="btn btn-sm {{ btnClass }} dropdown-toggle"
+                    data-bs-toggle="dropdown"
+                    data-bs-auto-close="outside"
+                    aria-expanded="false"
+            ></button>
             <ul class="dropdown-menu dropdown-menu-end">
                 {% for label,code in view.massActionChoices %}
-                <li>
-                    <button
-                        class="dropdown-item"
-                        type="submit"
-                        form="{{ view.massActionForm.vars.attr.id }}"
-                        name="{{ field_name(view.massActionForm.code) }}"
-                        value="{{ code }}"
-                    >{{ label|trans }}</button>
-                </li>
+                    <li>
+                        <button
+                            class="dropdown-item"
+                            type="submit"
+                            form="{{ view.massActionFormView.vars.attr.id }}"
+                            name="{{ field_name(view.massActionFormView.code) }}"
+                            value="{{ code }}"
+                        >{{ label|trans }}</button>
+                    </li>
                 {% endfor %}
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li>
+                    <label class="form-check-label dropdown-item">
+                        <input class="form-check-input me-1"
+                               type="checkbox"
+                               autocomplete="off"
+                               onchange="document.querySelectorAll('[name={{ ('"' ~ field_name(view.massActionFormView.ids) ~ '[]"')|escape('html_attr') }}]').forEach(checkbox => { checkbox.checked = this.checked; })"
+                        >
+                        Select All
+                    </label>
+                </li>
             </ul>
         </div>
-        {{ form_end(view.massActionForm) }}
+        {{ form_end(view.massActionFormView) }}
     </th>
 {% endif %}
