--- a/templates/bootstrap_5/grid/column_header_action.html.twig
+++ b/templates/bootstrap_5/grid/column_header_action.html.twig
@@ -43,8 +43,9 @@
                 <i class="bi bi-plus-lg"></i>
             </a>
         {% endif %}
+
         {% if attributes.header_action_template is defined %}
-            {{ include(attributes.header_action_template|agTheme) }}
+            {{ include(attributes.header_action_template) }}
         {% endif %}
     </th>
 {% endif %}
